Fri Sep 12 17:52:19 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/WriterInfo.h:
        * dds/DCPS/WriterInfo.cpp:

          0 is a legitimate timer value.  Use -1 to indicate not
          waiting for historic samples.

Thu Sep 11 19:00:07 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/publisher.cpp:

          Fix fuzz

Thu Sep 11 16:22:40 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/pub_multicast_async.ini:

          Make multicast_async have sufficient nak depth for resends.

Thu Sep 11 15:58:21 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Only log when debug level is set.

        * tests/DCPS/Thrasher/ParticipantTask.cpp:
        * tests/DCPS/Thrasher/Subscriber.cpp:

          Make entities go out of scope prior to calling
          partiipant->delete_containe_entities().

Tue Sep  9 21:11:22 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/publisher.cpp:

          Fix parsing of -r to be non-destructive.

Tue Sep  9 20:58:14 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/Writer.h:
        * tests/DCPS/LargeSample/Writer.cpp:
        * tests/DCPS/LargeSample/publisher.cpp:
        * tests/DCPS/LargeSample/run_test.pl:

          Restore sleep of 1 second when non-reliable (udp).

Tue Sep  9 18:38:46 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/WriterInfo.h:
        * dds/DCPS/WriterInfo.cpp:

          TransientLocalTest fix - wait for up to 10 seconds for
          EndHistoricSamples message, and block non-durable messages until
          then.  Cancel timer when cleaning up.

Fri Sep  5 21:20:27 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
