@@ -115,7 +115,7 @@ namespace OpenDDS { namespace Model {
       ///   for the special cases (vectors-of-vectors) which are noted.
       std::vector<DDS::DomainParticipant*>       participants_;
       std::vector<std::vector<bool> >            types_;  // [part][type]
-      std::vector<std::vector<DDS::TopicDescription*> > topics_; // [part][topic]
+      std::vector<std::vector<DDS::TopicDescription_var> > topics_; // [part][topic]
       std::vector<DDS::Publisher*>               publishers_;
       std::vector<DDS::Subscriber*>              subscribers_;
       std::vector<DDS::DataWriter*>              writers_;
